[package]
name = "ludum-dare-40"
version = "0.1.0"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]

[dependencies]
glium_text = { git = "https://github.com/fschutt/glium_text" }
image = "0.17.0"
failure = "0.1.1"
log = "0.3.8"
fern = "0.4.3"
twox-hash = "1.1.0"
nphysics2d = "0.7.2"
rodio = "0.5.2"

[dependencies.glium]
git = "https://github.com/fschutt/glium-backport"
branch = "glium_backport"
features = ["glutin"]

[profile.release]
panic = "abort"
debug = false
lto = true
